--- a/cache.html
+++ b/cache.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html manifest="cache.manifest"><head>
-<title>PS4 9.00 FW Host v3.0 by GamerHack</title>
+<title>PS4 9.00 JB by Mix</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
