--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ if (window.applicationCache.status=='0'){window.location.replace("cache.html");}
 <button class="atuin-btn-7" onclick=load_mods() style="margin-left: 69px"> Разное </button>
 </div>
 <div id="mods-section">
-<h1 style="font-size:18px;color:yellow;">Online Payloads</h1>
+<h1 style="font-size:18px;color:yellow;">Разное</h1>
 <button class="btn btn-one" onclick=load_binloader()> Bin Loader </button>
 <br>
 <button class="btn btn-one" onclick=load_Gdumper()> Game-Dumper </button>
