--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ load_poc();
 function load_arabicGuy100(){
 msgs.innerHTML="Загрузка... Пожалуйста Подождите";
 ЗагруженMSG = "GTA-5 v1.00 Загружен ..."
-PLfile = "arabic-guy100.bin";
+PLfile = "pl_GTA100.js";
 exec_loader = "payload";
 load_poc();
 }
