--- a/cache.html
+++ b/cache.html
@@ -14,7 +14,7 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
 <br>
 <div id="main-section">
 <h1 style="font-size:18px;color:red;">Загрузчик</h1>
-<button class="btn btn-two" onclick=load_goldhen22()><span> GoldHEN v2.2 </span></button>
+<button class="btn btn-two" onclick=load_goldhen23()><span> GoldHEN v2.3b2</span></button>
 <br><br>
 <hr>
 <br>
