--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ if (window.applicationCache.status=='0'){window.location.replace("cache.html");}
 <br>
 <div id="main-section">
 <h1 style="font-size:18px;color:red;">Загрузчик</h1>
-<button class="btn btn-two" onclick=load_goldhen22()><span> GoldHEN v2.2.2 </span></button>
+<button class="btn btn-two" onclick=load_goldhen23()><span> GoldHEN v2.3b2 </span></button>
 <br><br>
 <hr>
 <br>
@@ -274,9 +274,9 @@ eval.call(window, loadScript('netcat.js')
 +loadScript('relocator.js'));
 }
 
-function load_goldhen22(){
-ЗагруженMSG = "GoldHEN v2.2.2 Загружен ...";
-PLfile = "goldhen_2.2.2_900.bin";
+function load_goldhen23(){
+ЗагруженMSG = "GoldHEN v2.3b2 Загружен ...";
+PLfile = "goldhen_2.3b2.bin";
 exec_loader = "payload";
 load_poc();
 }
